hw1/task1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: flask-deployment
spec:
    replicas: 2
    selector: 
        matchLabels:
            app: flask
    template:
        metadata:
            labels:
                app: flask
        spec:
            containers:
              - name: flask-cont
                image: kkboranbay/flask-task2
                ports:
                  - containerPort: 9000   
                livenessProbe:
                  httpGet:
                    port: 9000
                    path: /
                  initialDelaySeconds: 10
                  periodSeconds: 5
                  timeoutSeconds: 2
                readinessProbe:
                  httpGet:
                    port: 9000
                    path: /health
                  initialDelaySeconds: 10
                  periodSeconds: 5
