hw1/task1/service.yml
apiVersion: v1
kind: Service
metadata:
    name: flask-service
spec:
    selector:
        app: flask
    ports:
      - protocol: TCP
        port: 9000
        targetPort: 9000
